--- a/index.html
+++ b/index.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Liquid Glass Navbar com Fundo Preto e Orbs</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <header class="header-cabecalho">
-        <nav class="nav-itens">
-            <img class="logo-astroya" src="https://astroya.com.br/Logo_A_Foguete.svg" alt="">
-            <ul class="nav-lista">
-                <li class="item-nav"><a class="a-item-nav" href="#">Home</a></li>
-                <li class="item-nav"><a class="a-item-nav" href="#">About</a></li>
-                <li class="item-nav"><a class="a-item-nav" href="#">Services</a></li>
-                <li class="item-nav"><a class="a-item-nav" href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main class="main-conteudo">
-        
-    </main>
-    <footer class="footer-rodape">
 
-    </footer>
-    <script src="./script.js"></script>
+    <div class="orb orange"></div>
+    <div class="orb purple"></div>
+
+    <nav class="navbar" id="staticNavbar">
+        <div class="navbar-logo">
+            <img src="https://astroya.com.br/Logo_A_Foguete.svg" alt="Logo">
+        </div>
+        <div class="navbar-links">
+            <a href="#">Home</a>
+            <a href="#">Sobre</a>
+            <a href="#">Cases</a>
+            <a href="#">Método</a>
+        </div>
+        <div class="navbar-actions">
+            <a href="#" class="btn btn-language">EN</a>
+            <a href="#" class="btn btn-contact">Contato</a>
+        </div>
+    </nav>
+    <div class="orb orange1"></div>
+    <div class="orb purple1"></div>
+
+    <div class="principal-page">
+    <h1 class="principal-title">Veja seu projeto antes de decidir.</h1>
+    <p class="principal-paragraph">Na Astroya, você não compra uma promessa. Recebe um protótipo visual gratuito e<br>navegável do seu site ou sistema. Interaja, experimente e só então decida se vamos construir<br>juntos.</p>
+    </div>
 </body>
 </html>
