--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
 
+    <!-- Orbs decorativos topo -->
     <div class="orb orange"></div>
     <div class="orb purple"></div>
 
+    <!-- Navbar -->
     <nav class="navbar" id="staticNavbar">
         <div class="navbar-logo">
             <img src="https://astroya.com.br/Logo_A_Foguete.svg" alt="Logo">
@@ -26,12 +28,39 @@
             <a href="#" class="btn btn-contact">Contato</a>
         </div>
     </nav>
+
+    <!-- Orbs decorativos rodapé -->
     <div class="orb orange1"></div>
     <div class="orb purple1"></div>
 
+    <!-- Conteúdo Principal -->
     <div class="principal-page">
-    <h1 class="principal-title">Veja seu projeto antes de decidir.</h1>
-    <p class="principal-paragraph">Na Astroya, você não compra uma promessa. Recebe um protótipo visual gratuito e<br>navegável do seu site ou sistema. Interaja, experimente e só então decida se vamos construir<br>juntos.</p>
+        <h1 class="principal-title">Veja seu projeto antes de decidir.</h1>
+        <p class="principal-paragraph">
+            Na Astroya, você não compra uma promessa. Recebe um protótipo visual gratuito e<br>
+            navegável do seu site ou sistema. Interaja, experimente e só então decida se vamos construir<br>
+            juntos.
+        </p>
+        <div class="principal-button">
+            <a href="#" class="btn btn-primary">Quero meu layout grátis ➔</a>
+        </div>
     </div>
+
+    <!-- Segundo Conteúdo Principal -->
+    <div class="second-principal-page">
+        <h2 class="second-principal-title">
+            Por Que Sistemas Sob<br>
+            Medida São a Única<br>
+            Opção?
+        </h2>
+        <div class="second-principal-paragraph">
+        <p class="second-paragraph">
+            Templates genéricos limitam seu<br>crescimento, seu modelo de<br>negócio e sua ambição. Nós<br>arquitetamos a ferramenta<br>digital que sua empresa<br>precisaria ter construído<br>internamente, mas com a<br>expertise de quem já o fez para<br>as mentes mais visionárias do<br>mercado.
+        </p>
+    </div>
+    </div>
+
+    
+
 </body>
 </html>
